# transcribe

./: .pre-commit-config.yaml  LICENSE  pyproject.toml  transcribe.py
